Added WHS Page#

--- a/about.html
+++ b/about.html
@@ -75,8 +75,7 @@
             <li role="none">
               <a role="menuitem" href="./ww3.html">Supremacy: WW3</a>
             </li>
-            <!-- Add more professional projects here -->
-            <!-- <li role="none"><a role="menuitem" href="./warhammer.html">Warhammer 40K: Supremacy</a></li> -->
+            <li role="none"><a role="menuitem" href="./warhammer.html">Warhammer 40K: Supremacy</a></li>
           </ul>
         </div>
 
