--- a/whs.html
+++ b/whs.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Supremacy: WW3 – Case Study | Mark Abdilla Mifsud</title>
+    <title>Warhammer 40K: Supremacy – Case Study | Mark Abdilla Mifsud</title>
     <meta
       name="description"
-      content="Case study: Monetization strategy, live ops, and webshop redesign for Supremacy: WW3. Results: +37pp DTC share, +5% payer conversion, 5× alliance participation."
-    />
+      content="Case study: Monetization Strategy for Launch, Sales Strategies and Structured A/B Testing
+      />
     <link
       rel="preload"
       href="./assets/profile_picture.jpeg"
@@ -74,7 +74,11 @@
             Professional Projects
           </button>
           <ul id="menu-professional" class="menu" role="menu">
-            <li role="none"><a role="menuitem" href="./warhammer.html">Warhammer 40K: Supremacy</a></li>
+            <li role="none">
+              <a role="menuitem" href="./ww3.html">Supremacy: WW3</a>
+            </li>
+            <!-- Add more professional projects here -->
+            <!-- <li role="none"><a role="menuitem" href="./warhammer.html">Warhammer 40K: Supremacy</a></li> -->
           </ul>
         </div>
 
@@ -116,18 +120,18 @@
       <!-- HERO -->
       <section class="project-hero">
         <div>
-          <p class="badge">Monetization • Live Ops • Systems Design</p>
-          <h1>Supremacy: WW3 — Monetization & Live Ops</h1>
+          <p class="badge">Monetization • A/B Testing • Launch Strategy • Data Analysis</p>
+          <h1>Warhammer 40K: Supremacy — Monetization & Launch</h1>
           <p class="lead">
-            Redesigned the DTC webshop and seasonal live ops to shift revenue
-            mix and improve early payer conversion. Delivered +37 percentage
-            points DTC revenue share, +5% payer conversion, and 5× monthly
-            alliance participation growth.
+            Established a comprehensive monetization strategy for the launch of the title, based on
+            best practices and lessons learned from other titles forming part of the 
+            Supremacy Franchise. This also involved establishing an A/B testing framework to
+            gather data on user behaviour, preferred price points and ingame engagement.
           </p>
           <div class="badge-row" role="list" aria-label="Tags">
             <span class="badge" role="listitem">F2P</span>
             <span class="badge" role="listitem">Strategy</span>
-            <span class="badge" role="listitem">Webshop</span>
+            <span class="badge" role="listitem">Launch</span>
             <span class="badge" role="listitem">Season Design</span>
             <span class="badge" role="listitem">A/B Testing</span>
             <span class="badge" role="listitem">Analytics</span>
@@ -137,16 +141,16 @@
           <h2 id="project-meta" class="sr-only">Project metadata</h2>
           <dl>
             <dt>Role</dt>
-            <dd>Monetization Manager</dd>
+            <dd>Principal Monetization Manager</dd>
             <dt>Company</dt>
-            <dd>Twin Harbour Interactive / Dorado Games</dd>
+            <dd>Twin Harbour Interactive</dd>
             <dt>Timeline</dt>
-            <dd>2021– present</dd>
+            <dd>2025– present</dd>
             <dt>Scope</dt>
-            <dd>Long-Term Strategy, Systems, Live Ops, Team Collaboration</dd>
+            <dd>Long-Term Strategy, A/B Testing, Data Analysis</dd>
             <dt>Outcomes</dt>
             <dd>
-              +37pp DTC share • +5% payer conversion • 5× alliance participation
+              Coming Soon • Coming Soon • Coming Soon
             </dd>
           </dl>
         </aside>
@@ -155,16 +159,16 @@
       <!-- KPIs -->
       <section class="kpi-grid" aria-label="Key metrics">
         <div class="kpi">
-          <div class="value">+37pp</div>
-          <div class="label">DTC revenue share</div>
+          <div class="value">NaN</div>
+          <div class="label">Coming Soon</div>
         </div>
         <div class="kpi">
-          <div class="value">+5%</div>
-          <div class="label">Payer conversion (Starter Pack)</div>
+          <div class="value">NaN</div>
+          <div class="label">Coming Soon</div>
         </div>
         <div class="kpi">
-          <div class="value">5×</div>
-          <div class="label">Alliance participation/month</div>
+          <div class="value">NaN</div>
+          <div class="label">Coming Soon</div>
         </div>
       </section>
 
@@ -174,22 +178,20 @@
           <h2>Context</h2>
           <ul class="list">
             <li>
-              Legacy webshop with weak visual hierarchy and low perceived value.
+              Joined the team late in production to flesh out monetization processes and strategic approach.
             </li>
             <li>
-              Season structure inconsistent across the year; low narrative
-              cohesion.
+              Lack of a cohesive plan on how to monetize the title while balancing this with fun game design.
             </li>
-            <li>Alliance competitions underutilized as a retention driver.</li>
           </ul>
         </div>
         <div class="card">
           <h2>Goals</h2>
           <ul class="list">
-            <li>Shift revenue mix to DTC channels.</li>
-            <li>Improve first‑time payer conversion.</li>
+            <li>Ensure population of shop with adequate offers and bundles.</li>
+            <li>Establish a clear flow for player first-time pay conversion.</li>
             <li>
-              Make seasons repeatable, legible, and monetizable without P2W.
+              Assist Game Design Team with ensuring offers and events are monetizable and in keeping with Warhammer lore.
             </li>
           </ul>
         </div>
@@ -200,20 +202,16 @@
           <h2>My Approach</h2>
           <ul class="list">
             <li>
-              Webshop redesign with bundle framing, decoy tiers, and clearer
-              value ladders.
+              Utilise Supremacy 1914 monetization approach to make entry curve less daunting.
             </li>
             <li>
-              Season “rails”: elite units, flagship levels, missions, narrative
-              beats.
+              Provide adeqaute opportunities for players to monetize through Premium Currency, Subscriptions and Faction Units.
             </li>
             <li>
-              Starter Pack experiments with price points, contents, and expiry
-              windows.
+              Establish a series of Starter Packs, aimed at ensuring adequate first and second payment flows.
             </li>
             <li>
-              Live‑ops schedule aligned to player lifecycle cohorts and LTV
-              segments.
+              Cohesive Sales Strategy to ensure better monetization on event days.
             </li>
           </ul>
         </div>
@@ -221,9 +219,9 @@
           <h2>Responsibilities</h2>
           <ul class="list">
             <li>Monetization strategy and A/B test design.</li>
-            <li>Collaboration with UX/UI on shop UX and visual systems.</li>
-            <li>Event economy and reward tuning; sink/source audits.</li>
-            <li>Stakeholder reporting and KPI tracking.</li>
+            <li>Entry point sales strategy to allow tiered payclass progression.</li>
+            <li>Coordinate lore loyal systems and approaches for monetization.</li>
+            <li>Data Analysis and adopting findings to iterate on designs.</li>
           </ul>
         </div>
       </section>
@@ -233,24 +231,15 @@
         <h2>System Designs</h2>
         <div class="two-col">
           <div class="card">
-            <h3>Webshop Redesign</h3>
+            <h3>Shop Design</h3>
             <ul class="list">
-              <li>Introduced anchor/decoy pricing and clear tier naming.</li>
+              <li>Introduced a launch shop for mobile and desktop.</li>
               <li>
-                Improved art direction and scarcity cues without dark patterns.
+                Establish a Starter Pack and follow-up Faction Packs.
               </li>
               <li>
-                Localized psychological price points; surfaced subscription
-                value.
+                Drove DTC store strategy to ensure adequate revenue share subject to less fees.
               </li>
-            </ul>
-          </div>
-          <div class="card">
-            <h3>Season Design</h3>
-            <ul class="list">
-              <li>Repeatable template with elite units + mission arcs.</li>
-              <li>Flagship upgrades linked to season identity.</li>
-              <li>Clear earn/spend loops to avoid pay‑to‑win perception.</li>
             </ul>
           </div>
         </div>
@@ -281,16 +270,7 @@
           <h2>Impact</h2>
           <ul class="list">
             <li>
-              <strong>+37pp</strong> increase in DTC revenue share following
-              webshop redesign.
-            </li>
-            <li>
-              <strong>+5%</strong> increase in first‑time payer conversion via
-              Starter Pack tests.
-            </li>
-            <li>
-              <strong>5×</strong> increase in monthly alliance participation
-              after competition revamp.
+             Coming Soon
             </li>
           </ul>
         </div>
@@ -298,10 +278,8 @@
           <h2>What I’d Tackle Next</h2>
           <ul class="list">
             <li>
-              Deeper cohort‑based offer personalization beyond age/LTV matrix.
+             Coming Soon
             </li>
-            <li>Automated event ops dashboard with anomaly alerts.</li>
-            <li>Creative testing pipeline for shop art and copy.</li>
           </ul>
         </div>
       </section>
@@ -309,14 +287,14 @@
       <!-- CREDITS -->
       <section class="section credits">
         <p>
-          Credits: UX/UI, Product, Data, Live Ops, Community teams at Dorado
-          Games.
+          Credits: Monetization, Product, Data, Game Design teams at Twin Harbour Interactive, in collaboration with New Moon Productions.
         </p>
       </section>
 
       <!-- FOOT NAV BETWEEN PROJECTS -->
       <nav class="proj-foot-nav" aria-label="Project navigation">
-        <a href="./whs.html" rel="next">Next →</a>
+        <a href="./ww3.html" rel="prev">← Previous</a>
+        <a href="./next-project.html" rel="next">Next →</a>
       </nav>
     </main>
 
