Fixed broken link

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
               <a role="menuitem" href="./ww3.html">Supremacy: WW3</a>
             </li>
             <li role="none">
-              <a role="menuitem" href="./warhammer.html">Warhammer 40K: Supremacy</a>
+              <a role="menuitem" href="./whs.html">Warhammer 40K: Supremacy</a>
             </li>
           </ul>
         </div>
