--- a/ww3.html
+++ b/ww3.html
@@ -74,7 +74,7 @@
             Professional Projects
           </button>
           <ul id="menu-professional" class="menu" role="menu">
-            <li role="none"><a role="menuitem" href="./warhammer.html">Warhammer 40K: Supremacy</a></li>
+            <li role="none"><a role="menuitem" href="./whs.html">Warhammer 40K: Supremacy</a></li>
           </ul>
         </div>
 
