Fixed header on mobile and github logo

--- a/index.html
+++ b/index.html
@@ -38,9 +38,15 @@
             <span class="theme-toggle__icon" aria-hidden="true"></span>
             <span class="sr-only">Toggle theme</span>
           </button>
-          <a href="https://github.com/MarkAbdillaMifsud/"
-            ><img src="./assets/github.png" alt="Github Logo"
-          /></a>
+          <a href="https://github.com/MarkAbdillaMifsud/">
+            <img
+              id="githubIcon"
+              src="./assets/github_darkmode.png"
+              data-dark="./assets/github_darkmode.png"
+              data-light="./assets/github_lightmode.png"
+              alt="GitHub Logo"
+            />
+          </a>
           <a href="https://www.linkedin.com/in/mark-abdilla/"
             ><img src="./assets/Linkedin.png" alt="LinkedIn Logo"
           /></a>
@@ -127,7 +133,7 @@
               src="./assets/wh-poster.png"
               alt="Warhammer 40K: Supremacy promotional poster"
             />
-            <h3>Warhammer 40K: Supremacy</h3>
+            <h3><a href="./whs.html">Warhammer 40K: Supremacy</a></h3>
             <p>
               War is unending on Planet Vigilus. Take control of one of four
               Warhammer 40K factions and lead your people to victory against
