--- a/about.html
+++ b/about.html
@@ -38,9 +38,15 @@
           <span class="theme-toggle__icon" aria-hidden="true"></span>
           <span class="sr-only">Toggle theme</span>
         </button>
-          <a href="https://github.com/MarkAbdillaMifsud/"
-            ><img src="./assets/github.png" alt="GitHub" width="40" height="40"
-          /></a>
+          <a href="https://github.com/MarkAbdillaMifsud/">
+            <img
+              id="githubIcon"
+              src="./assets/github_darkmode.png"
+              data-dark="./assets/github_darkmode.png"
+              data-light="./assets/github_lightmode.png"
+              alt="GitHub Logo"
+            />
+          </a>
           <a href="https://www.linkedin.com/in/mark-abdilla/"
             ><img
               src="./assets/Linkedin.png"
