Added Machinations Project

--- a/index.html
+++ b/index.html
@@ -99,6 +99,9 @@
                 >Shattered: Repair Your Identity</a
               >
             </li>
+            <li role="none">
+              <a role="menuitem" href="./economy.html">Machinations Crafting Economy</a>
+            </li>
           </ul>
         </div>
 
@@ -162,7 +165,7 @@
               src="./assets/shattered_logo.png"
               alt="Shattered: Repair Your Identity logo"
             />
-            <h3>Shattered: Repair Your Identity</h3>
+            <h3><a href="./shattered.html">Shattered: Repair Your Identity</a></h3>
             <p>
               Waking up in an empty house, you have no recollection of your
               identity. Explore the house, discover your past, and piece
