Updated nav bar

--- a/whs.html
+++ b/whs.html
@@ -76,6 +76,9 @@
           <ul id="menu-personal" class="menu" role="menu">
             <li role="none"><a role="menuitem" href="./wdcc.html">Wacky’s Dungeon Combat Club</a></li>
             <li role="none"><a role="menuitem" href="./shattered.html">Shattered: Repair Your Identity</a></li>
+            <li role="none">
+              <a role="menuitem" href="./economy.html">Machinations Crafting Economy</a>
+            </li>
           </ul>
         </div>
         <div><a href="./about.html">About and Resume</a></div>
