--- a/shattered.html
+++ b/shattered.html
@@ -82,6 +82,9 @@
           <ul id="menu-personal" class="menu" role="menu">
             <li role="none"><a role="menuitem" href="./wdcc.html">Wacky’s Dungeon Combat Club</a></li>
             <li role="none"><a role="menuitem" href="./shattered.html" aria-current="page">Shattered</a></li>
+            <li role="none">
+              <a role="menuitem" href="./economy.html">Machinations Crafting Economy</a>
+            </li>
           </ul>
         </div>
 
