--- a/ww3.html
+++ b/ww3.html
@@ -104,6 +104,9 @@
                 >Shattered: Repair Your Identity</a
               >
             </li>
+            <li role="none">
+              <a role="menuitem" href="./economy.html">Machinations Crafting Economy</a>
+            </li>
           </ul>
         </div>
 
